@@ -4,3 +4,4 @@ I will do my best to ensure all changes are included here
 
 08-12-21: Univariate confidence intervals, two-sample case
 09-12-21: Linear regression
+10-12-21: Multivariate confidence regions and joint confidence level. Allow infinities in the univariate permutation tests.
